[package]
name = "morning_paper"
version = "0.1.0"
authors = ["Ilya Radchenko <knownasilya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "62e4e59a864a3d2ca01e0372cb2f0ffed0d2dbf6" }
